updated migration testing